--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,10 @@
     </nav>
 </header>
 <main>
-    <article>
-        <h2>Wie ben ik?</h2>
-        <p>Ik ben ...</p>
 
-    </article>
+        <video controls>
+            <source src="videos/placeholder.mp4" type="video/mp4"></video>
+
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
