--- a/src/projecten.html
+++ b/src/projecten.html
@@ -21,10 +21,11 @@
     </nav>
 </header>
 <main>
+    <article>
     <h2>Welkom</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae corporis culpa doloribus eos impedit
         ipsa maxime minus perspiciatis ratione rerum, totam, unde voluptas! Ad cum distinctio odio quis ut.</p>
-
+    </article>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
