contactpagina.html, competenties.html & projecten.html

--- a/src/contactpagina.html
+++ b/src/contactpagina.html
@@ -5,6 +5,7 @@
     <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -21,11 +22,12 @@
     </nav>
 </header>
 <main>
-    <article>
-    <h2>Welkom</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae corporis culpa doloribus eos impedit
-        ipsa maxime minus perspiciatis ratione rerum, totam, unde voluptas! Ad cum distinctio odio quis ut.</p>
-    </article>
+    <div class="grid-container">
+        <a href="https://www.facebook.com/jens.roets" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/JensRoets" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/jensroets" class="fa fa-linkedin"></a>
+        <a href="https://www.instagram.com/jensroets/" class="fa fa-instagram"></a>
+    </div>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
