--- a/src/projecten.html
+++ b/src/projecten.html
@@ -22,9 +22,11 @@
 </header>
 <main>
     <article>
-    <h2>Welkom</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae corporis culpa doloribus eos impedit
-        ipsa maxime minus perspiciatis ratione rerum, totam, unde voluptas! Ad cum distinctio odio quis ut.</p>
+    <h2>Mijn projecten:</h2>
+        <ul>
+            <li><a href="web1/index.html">Project Web 1: HTML & CSS</a></li>
+            <li><a href="#">...</a></li>
+        </ul>
     </article>
 </main>
 
