--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
 </header>
 <main>
 
-        <video controls>
-            <source src="videos/placeholder.mp4" type="video/mp4"></video>
+        <video controls><source src="videos/placeholder.mp4" type="video/mp4"></video>
 
 </main>
 
