--- a/contactpagina.html
+++ b/contactpagina.html
@@ -26,7 +26,7 @@
         <a href="https://www.facebook.com/jens.roets" class="fa fa-facebook"></a>
         <a href="https://twitter.com/JensRoets" class="fa fa-twitter"></a>
         <a href="https://www.linkedin.com/in/jensroets" class="fa fa-linkedin"></a>
-        <a href="https://www.instagram.com/jensroets/" class="fa fa-instagram"></a>
+        <a href="mailto:jens.roets@student.ucll.be" class="fa fa-envelope"></a>
     </div>
 </main>
 
