--- a/competenties.html
+++ b/competenties.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Competenties</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/flipcard.css" rel="stylesheet">
     <link href="css/cssV1.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -21,7 +23,301 @@
     </nav>
 </header>
 <main>
-    <img src="images/swot_example.png">
+    <div class="container">
+        <div class="boxS">
+            <div class="card">
+            <div class="card-back">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">const </span><span class="function">Strengths </span><span class="operator">= </span><span>{</span>
+                <div class="indent"> <span class="property">ervaringen</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">middelbaar</span><span class="operator">: </span><span class="string">'Economie-Wiskunde'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">hoger onderwijs</span><span class="operator">: </span><span>{</span>
+                        <div class="indent"> <span class="property">UGent</span><span class="operator">: </span><span class="string">'Psychologie 1ste bachelor'</span><span>,</span></div>
+                        <div class="indent"> <span class="property">KULeuven</span><span class="operator">: </span><span class="string">'Psychologie 1ste bachelor'</span><span>,</span></div>
+                        <div class="indent"><span class="property">UCLL</span><span class="operator">: </span><span class="string">'Toegepaste Informatica'</span></div><span>},</span>
+                    </div>
+                </div>
+                <div class="indent"> <span class="property">karakter</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'nieuwsgierig'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">2</span><span class="operator">: </span><span class="string">'betrouwbaar'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">3</span><span class="operator">: </span><span class="string">'loyaal'</span><span>,</span></div>
+                    <div class="indent"><span class="property">4</span><span class="operator">: </span><span class="string">'doorzettingsvermogen'</span></div><span>},</span>
+                </div>
+                <div class="indent"> <span class="property">programmeertalen</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'Java'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">2</span><span class="operator">: </span><span class="string">'HTML & CSS'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">3</span><span class="operator">: </span><span class="string">'C# & C++'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">4</span><span class="operator">: </span><span class="string">'PostgreSQL'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">5</span><span class="operator">: </span><span class="string">'JavaScript & Python'</span><span>,</span></div>
+                    <div class="indent"><span class="property">6</span><span class="operator">: </span><span class="string">'Elixir'</span></div><span>}</span>
+                </div>
+                <span>}</span>
+
+            </code>
+            </div>
+            <div class="card-front">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'hover'</span><span>, </span><span class="function">() => </span><span>{ </span>
+                <div class="indent"><span class="variable">this</span><span>.</span><span class="property">Strengths</span>.<span class="method">show()</span><span></span><span>;</span></div><span>});</span>
+            </code>
+            </div>
+        </div></div>
+        <div class="boxW"><div class="card">
+            <div class="card-back">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">const </span><span class="function">Weaknesses </span><span class="operator">= </span><span>{</span>
+                <div class="indent"> <span class="property">karakter</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'obessief werken'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">2</span><span class="operator">: </span><span class="string">'verlegen'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">3</span><span class="operator">: </span><span class="string">'onzeker'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">4</span><span class="operator">: </span><span class="string">'fluctuerende motivatie'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">5</span><span class="operator">: </span><span class="string">'niet sportief'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">6</span><span class="operator">: </span><span class="string">'West-Vlaams accent'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">7</span><span class="operator">: </span><span class="string">'gemiddeld'</span><span>,</span></div>
+                    <div class="indent"><span class="property">8</span><span class="operator">: </span><span class="string">'overdenken'</span></div><span>},</span>
+                </div>
+                <div class="indent"> <span class="property">IT-concepten</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'Strategies & Designs'</span><span>,</span></div>
+                    <div class="indent"> <span class="property">2</span><span class="operator">: </span><span class="string">'Security'</span><span>,</span></div>
+                    <div class="indent"><span class="property">3</span><span class="operator">: </span><span class="string">'Netwerken'</span></div><span>}</span>
+                </div>
+                <span>}</span>
+
+            </code>
+            </div>
+            <div class="card-front">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'hover'</span><span>, </span><span class="function">() => </span><span>{ </span>
+                <div class="indent"><span class="variable">this</span><span>.</span><span class="property">Weaknesses</span>.<span class="method">show()</span><span></span><span>;</span></div><span>});</span>
+            </code>
+            </div>
+        </div></div>
+        <div class="boxO"><div class="card">
+            <div class="card-back">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">const </span><span class="function">Opportunities </span><span class="operator">= </span><span>{</span>
+                <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'diploma IT'</span><span>,</span></div>
+                <div class="indent"> <span class="property">2</span><span class="operator">: </span><span class="string">'sociaal netwerk'</span><span>,</span></div>
+                <div class="indent"> <span class="property">3</span><span class="operator">: </span><span class="string">'werkmogelijkheid stageplaats'</span><span>,</span></div>
+                <div class="indent"> <span class="property">4</span><span class="operator">: </span><span class="string">'vader burgelijk ingenieur & doctoraat'</span><span>,</span></div>
+                <div class="indent"><span class="property">5</span><span class="operator">: </span><span class="string">'webshop voor schoonmoeder'</span></div><span>}</span>
+            </code>
+            </div>
+            <div class="card-front">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'hover'</span><span>, </span><span class="function">() => </span><span>{ </span>
+                <div class="indent"><span class="variable">this</span><span>.</span><span class="property">Opportunities</span>.<span class="method">show()</span><span></span><span>;</span></div><span>});</span>
+            </code>
+            </div>
+        </div></div>
+        <div class="boxT"><div class="card">
+            <div class="card-back">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">const </span><span class="function">Threats </span><span class="operator">= </span><span>{</span>
+                <div class="indent"> <span class="property">corona</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'mentaal'</span><span>,</span></div>
+                    <div class="indent"><span class="property">2</span><span class="operator">: </span><span class="string">'fysiek'</span></div><span>},</span>
+                </div>
+                <div class="indent"> <span class="property">ongevallen</span><span class="operator">: </span><span>{</span>
+                    <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'breuk aan vingers kan carrière kosten'</span><span>,</span></div>
+                    <div class="indent"><span class="property">2</span><span class="operator">: </span><span class="string">'rugklachten'</span></div><span>},</span>
+                </div>
+                <div class="indent"> <span class="property">informaticasector </span><span class="operator">: </span><span class="string">'kennis verouderd snel'</span><span>,</span></div>
+                <div class="indent"><span class="property">aantal goeie programmeurs</span><span class="operator">: </span><span class="string">'veel'</span></div><span>}</span>
+            </code>
+            </div>
+            <div class="card-front">
+                <div class="line-numbers">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                    <div>17</div>
+                    <div>18</div>
+                    <div>19</div>
+                    <div>20</div>
+                    <div>21</div>
+                    <div>22</div>
+                    <div>23</div>
+                </div><code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'hover'</span><span>, </span><span class="function">() => </span><span>{ </span>
+                <div class="indent"><span class="variable">this</span><span>.</span><span class="property">Threats</span>.<span class="method">show()</span><span></span><span>;</span></div><span>});</span>
+            </code>
+            </div>
+        </div></div>
+    </div>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
