--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <main>
 
-        <video controls><source src="videos/placeholder.mp4" type="video/mp4"></video>
+        <video controls><source src="videos/cv_video_JensRoets_compr.mp4" type="video/mp4"></video>
 
 </main>
 
