--- a/projecten.html
+++ b/projecten.html
@@ -25,7 +25,18 @@
     <h2>Mijn projecten:</h2>
         <ul>
             <li><a href="web1/index.html">Project Web 1: HTML & CSS</a></li>
-            <li><a href="#">...</a></li>
+            <li><a href="https://github.com/Jens-Roets/Web2ProjectServlet">Web 2: Servlet</a></li>
+            <li><a href="https://github.com/UCLLWebontwikkeling3-project-2021/web3-project-Jens-Roets">Web 3: Controller met Factory model, Maven, JDBC, AuthZ & AuthN, JavaScript, XSS</a></li>
+            <li><a href="https://github.com/UCLL-Web4-Juni2021/opdracht-team12">Web 4: Ajax polling & pushing, JQuery + REST-controlller backend</a></li>
+            <li><a href="https://github.com/UCLL-Web4-Juni2021/Angular_Users_Team12_JensRoets">Web 4: Angular Frontend</a></li>
+            <li><a href="https://github.com/Project-2-Cloud/hybrid-cloud-caffeine-addicts">Project 2 Webshop Teablets: VueJs Frontend</a></li>
+            <li><a href="https://github.com/Project-2-Cloud/caffeine-addicts-auth">Project 2 Webshop Teablets: AuthN</a></li>
+            <li><a href="https://github.com/Project-2-Cloud/caffeine-addicts-backend">Project 2 Webshop Teablets: SpringBoot Backend + PostgreSQL server</a></li>
+            <li><a href="https://github.com/Projectweek-2-2020-2021/projectweek-2-presence-mathias_en_zen_8_tech_tips">Project 2 Website OCMW</a></li>
+            <li><a href="https://github.com/ucll-internet-programming-major/assignment-ip-major-june-jens-en-stijn">Internetprogrammeren Major: Webshop in Elixir Phoenix framework met bevestigingsmails + mailserver</a></li>
+            <li><a href="https://github.com/UCLLIpMinor-2021-classroom/ipminor2021-team-13">Internetprogrammeren Minor: SpringBoot CRUD + security</a></li>
+            <li><a href="https://github.com/ucll-vgo2021-sem2/project-Jens-Roets">Visuele Gebruikersomgeving: WPF c# framework GUI voor bordspel Gomoku</a></li>
+            <li><a href="https://github.com/UCLLWebontwikkeling3-project-2021/pageobjectpairprogramming-Jens-Roets">Testing: Java Pages</a></li>
         </ul>
     </article>
 </main>
