--- a/projecten.html
+++ b/projecten.html
@@ -5,6 +5,7 @@
     <title>Projecten</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
+    <link href="css/list.css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 <main>
     <article>
     <h2>Mijn projecten:</h2>
-        <ul>
+        <ol class="gradient-list">
             <li><a href="web1/index.html">Project Web 1: HTML & CSS</a></li>
             <li><a href="https://github.com/Jens-Roets/Web2ProjectServlet">Web 2: Servlet</a></li>
             <li><a href="https://github.com/UCLLWebontwikkeling3-project-2021/web3-project-Jens-Roets">Web 3: Controller met Factory model, Maven, JDBC, AuthZ & AuthN, JavaScript, XSS</a></li>
@@ -37,7 +38,7 @@
             <li><a href="https://github.com/UCLLIpMinor-2021-classroom/ipminor2021-team-13">Internetprogrammeren Minor: SpringBoot CRUD + security</a></li>
             <li><a href="https://github.com/ucll-vgo2021-sem2/project-Jens-Roets">Visuele Gebruikersomgeving: WPF c# framework GUI voor bordspel Gomoku</a></li>
             <li><a href="https://github.com/UCLLWebontwikkeling3-project-2021/pageobjectpairprogramming-Jens-Roets">Testing: Java Pages</a></li>
-        </ul>
+        </ol>
     </article>
 </main>
 
