contactpagina.html + css fix

--- a/contactpagina.html
+++ b/contactpagina.html
@@ -5,7 +5,9 @@
     <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/social.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -22,10 +24,34 @@
     </nav>
 </header>
 <main>
-    <div class="grid-container">
-        <a href="https://www.linkedin.com/in/jensroets" class="fa fa-linkedin"></a>
-        <a href="mailto:jens.roets@student.ucll.be" class="fa fa-envelope"></a>
-    </div>
+    <section>
+        <ul id="services">
+            <li>
+                <div class="linkedin">
+                    <a href="https://www.linkedin.com/in/jensroets/">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <span>LinkedIn</span>
+            </li>
+            <li>
+                <div class="email">
+                    <a href="mailto:jens.roets@student.ucll.be">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <span>Email</span>
+            </li>
+            <li>
+                <div class="github">
+                    <a href="https://github.com/Jens-Roets">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <span>Github</span>
+            </li>
+        </ul>
+    </section>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
