--- a/contactpagina.html
+++ b/contactpagina.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
     <link href="css/social.css" rel="stylesheet">
+    <link href="css/socialcard.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
@@ -24,34 +25,40 @@
     </nav>
 </header>
 <main>
-    <section>
-        <ul id="services">
-            <li>
-                <div class="linkedin">
-                    <a href="https://www.linkedin.com/in/jensroets/">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <span>LinkedIn</span>
-            </li>
-            <li>
-                <div class="email">
-                    <a href="mailto:jens.roets@student.ucll.be">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <span>Email</span>
-            </li>
-            <li>
-                <div class="github">
-                    <a href="https://github.com/Jens-Roets">
-                        <i class="fa fa-github" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <span>Github</span>
-            </li>
-        </ul>
-    </section>
+    <div class="card-container">
+        <img class="round" src="images/facebook%20foto.jpg" alt="Jens profielfoto" />
+        <h3>Jens Roets</h3>
+        <h6>Brugge</h6>
+        <p>Student Toegepaste Informatica - UCLL</p>
+        <section>
+            <ul id="services">
+                <li>
+                    <div class="linkedin">
+                        <a href="https://www.linkedin.com/in/jensroets/">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <span>LinkedIn</span>
+                </li>
+                <li>
+                    <div class="email">
+                        <a href="mailto:jens.roets@student.ucll.be">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <span>Email</span>
+                </li>
+                <li>
+                    <div class="github">
+                        <a href="https://github.com/Jens-Roets">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <span>Github</span>
+                </li>
+            </ul>
+        </section>
+    </div>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
