--- a/cv.html
+++ b/cv.html
@@ -21,6 +21,7 @@
     </nav>
 </header>
 <main>
+    <a href="pdf/Certificate%20BusIT%20Week%202021.pdf"><button type="button">Certificaat IBM BusIT week 2021</button></a>
     <embed src= "pdf/cv_JensRoets.pdf">
 </main>
 
