--- a/projecten.html
+++ b/projecten.html
@@ -36,7 +36,7 @@
             <li><a href="https://github.com/Projectweek-2-2020-2021/projectweek-2-presence-mathias_en_zen_8_tech_tips">Project 2 Website OCMW</a></li>
             <li><a href="https://github.com/ucll-internet-programming-major/assignment-ip-major-june-jens-en-stijn">Internetprogrammeren Major: Webshop in Elixir Phoenix framework met bevestigingsmails + mailserver</a></li>
             <li><a href="https://github.com/UCLLIpMinor-2021-classroom/ipminor2021-team-13">Internetprogrammeren Minor: SpringBoot CRUD + security</a></li>
-            <li><a href="https://github.com/ucll-vgo2021-sem2/project-Jens-Roets">Visuele Gebruikersomgeving: WPF c# framework GUI voor bordspel Gomoku</a></li>
+            <li><a href="https://github.com/ucll-vgo2021-sem2/project-Jens-Roets">Visuele Gebruikersomgeving: WPF C# framework GUI voor bordspel Gomoku</a></li>
             <li><a href="https://github.com/UCLLWebontwikkeling3-project-2021/pageobjectpairprogramming-Jens-Roets">Testing: Java Pages</a></li>
         </ol>
     </article>
