--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
+    <link href="css/socialcard.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,9 +22,9 @@
     </nav>
 </header>
 <main>
-
-        <video controls><source src="videos/cv_video_JensRoets_compr.mp4" type="video/mp4"></video>
-
+    <div>
+        <video controls><source id="vid" src="videos/cv_video_JensRoets_compr.mp4" type="video/mp4"></video>
+    </div>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
