--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <title>CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssV1.css" rel="stylesheet">
+    <link href="css/button.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,9 @@
     </nav>
 </header>
 <main>
-    <a href="pdf/Certificate%20BusIT%20Week%202021.pdf"><button type="button">Certificaat IBM BusIT week 2021</button></a>
+    <div class="container">
+        <a href="pdf/Certificate%20BusIT%20Week%202021.pdf" class="btn">Certificate BusIT Week 2021</a>
+    </div>
     <embed src= "pdf/cv_JensRoets.pdf">
 </main>
 
