--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     </nav>
 </header>
 <main>
-    <div>
-        <video controls><source id="vid" src="videos/cv_video_JensRoets_compr.mp4" type="video/mp4"></video>
-    </div>
+    <video controls><source src="videos/cv_video_JensRoets_compr.mp4" type="video/mp4"></video>
 </main>
 
 <footer>Communicatie - Jens Roets - r0764391</footer>
