button shows no css on github pages fix

--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
 </header>
 <main>
     <div class="container">
-        <a href="pdf/Certificate%20BusIT%20Week%202021.pdf" class="btn">Certificate BusIT Week 2021</a>
+        <a href="pdf/Certificate%20BusIT%20Week%202021.pdf" class="fancy_button">Certificate BusIT Week 2021</a>
     </div>
     <embed src= "pdf/cv_JensRoets.pdf">
 </main>
