--- a/competenties.html
+++ b/competenties.html
@@ -58,7 +58,7 @@
                         <div class="indent"> <span class="property">UGent</span><span class="operator">: </span><span class="string">'Psychologie 1ste bachelor'</span><span>,</span></div>
                         <div class="indent"> <span class="property">KULeuven</span><span class="operator">: </span><span class="string">'Psychologie 1ste bachelor'</span><span>,</span></div>
                         <div class="indent"><span class="property">UCLL</span><span class="operator">: </span><span class="string">'Toegepaste Informatica'</span></div><span>},</span>
-                    </div>
+                    </div><span>},</span>
                 </div>
                 <div class="indent"> <span class="property">karakter</span><span class="operator">: </span><span>{</span>
                     <div class="indent"> <span class="property">1</span><span class="operator">: </span><span class="string">'nieuwsgierig'</span><span>,</span></div>
